--- a/assistant/.env.example
+++ b/assistant/.env.example
@@ -1,26 +1,38 @@
 # ============================================
-# AI Assistant Environment Configuration
+# Chapna AI Assistant — Configuration
 # Copy this file to .env and fill in your values
 # ============================================
 
-# Telegram Bot Token (get from @BotFather on Telegram)
+# ── Telegram Bot ─────────────────────────────────────────
+# Get your bot token from @BotFather on Telegram
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 
-# Your Telegram User ID (get from @userinfobot on Telegram)
-# Only this user ID can control the bot
-TELEGRAM_ALLOWED_USER_ID=your_telegram_user_id_here
+# Your Telegram User ID(s) — comma-separated for multiple users
+# Get your ID from @userinfobot on Telegram
+TELEGRAM_ALLOWED_USER_IDS=123456789
 
-# Ollama Configuration
+# ── Ollama LLM ───────────────────────────────────────────
 OLLAMA_BASE_URL=http://localhost:11434
-OLLAMA_MODEL=llama3.2
+OLLAMA_MODEL=llama3.2-vision
+OLLAMA_TIMEOUT=120
 
-# Rate Limiting (requests per minute)
+# ── Rate Limiting ────────────────────────────────────────
+# Max requests per minute per user
 RATE_LIMIT_RPM=30
 
-# Logging
+# ── Logging ──────────────────────────────────────────────
 LOG_LEVEL=INFO
-LOG_FILE=assistant.log
+LOG_FILE=chapna.log
 
-# FastAPI Server
+# ── FastAPI Server (local only) ──────────────────────────
 API_HOST=127.0.0.1
 API_PORT=8000
+# Optional API token for /command endpoint (leave empty to disable)
+API_TOKEN=
+
+# ── Email (Optional) ────────────────────────────────────
+# For Gmail: use an App Password from https://myaccount.google.com/apppasswords
+SENDER_EMAIL=
+SENDER_PASSWORD=
+SMTP_SERVER=smtp.gmail.com
+SMTP_PORT=587
