--- a/assistant/.env.example
+++ b/assistant/.env.example
@@ -1,5 +1,5 @@
 # ============================================
-# Chapna AI Assistant — Configuration
+# Clawbot — Configuration
 # Copy this file to .env and fill in your values
 # ============================================
 
@@ -10,6 +10,8 @@ TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 # Your Telegram User ID(s) — comma-separated for multiple users
 # Get your ID from @userinfobot on Telegram
 TELEGRAM_ALLOWED_USER_IDS=123456789
+
+TELEGRAM_COMMAND_TOKEN=your_strong_command_token
 
 # ── Ollama LLM ───────────────────────────────────────────
 OLLAMA_BASE_URL=http://localhost:11434
@@ -22,13 +24,14 @@ RATE_LIMIT_RPM=30
 
 # ── Logging ──────────────────────────────────────────────
 LOG_LEVEL=INFO
-LOG_FILE=chapna.log
+LOG_FILE=clawbot.log
 
 # ── FastAPI Server (local only) ──────────────────────────
 API_HOST=127.0.0.1
 API_PORT=8000
-# Optional API token for /command endpoint (leave empty to disable)
-API_TOKEN=
+API_TOKEN=your_local_api_token
+
+ALLOWED_FILE_DIRS=C:\Users\YourUser\Desktop;C:\Users\YourUser\Documents;C:\Users\YourUser\Downloads
 
 # ── Email (Optional) ────────────────────────────────────
 # For Gmail: use an App Password from https://myaccount.google.com/apppasswords
